--- a/_translations/en.yml
+++ b/_translations/en.yml
@@ -288,6 +288,10 @@ en:
     checkneutralfeecontrolvariabletxt: "Fee control features are provided by the software wallet you use with this device. Please see the Fee Control score for the software wallet you plan to use."
     checkfailfeecontrolstatic: "Static fee suggestions"
     checkfailfeecontrolstatictxt: "This wallet does not provide any fee suggestions which are based on current network conditions.  This means that your transactions may be subject to delays if the fee chosen is too low, or that you may pay a fee which is too high."
+    checkpassslptokens: "Supports SLP tokens"
+    checkpassslptokenstxt: "This wallet supports Simple Ledger Protocol tokens. Read more at <a href="https://simpleledger.cash">simpleledger.cash</a>."
+    checkfailslptokens: "Does not support SLP tokens"
+    checkfailslptokenstxt: "This wallet does not support Simple Ledger Protocol tokens. Read more at <a href="https://simpleledger.cash">simpleledger.cash</a>"
     educate: "Take time to educate yourself"
     educatetxt: "Bitcoin Cash is different from what you know and use every day. Before you start using Bitcoin Cash for any serious transaction, be sure to read <a href=\"#you-need-to-know#\"><b>what you need to know</b></a> and take appropriate steps to <a href=\"#secure-your-wallet#\"><b>secure your wallet</b></a>. Always remember that it is your responsibility to choose your wallet carefully and adopt good practices in order to protect your money."
   developer-documentation:
