Add slp check to wallet schema

--- a/quality-assurance/schemas/wallets.yaml
+++ b/quality-assurance/schemas/wallets.yaml
@@ -131,6 +131,7 @@ properties:
                   - transparency
                   - environment
                   - privacy
+                  - slp
                   ## TODO: make required when web wallets moved
                   # - fees
                 additionalProperties: false
