--- a/_translations/en.yml
+++ b/_translations/en.yml
@@ -291,7 +291,7 @@ en:
     checkpassslptokens: "Supports SLP tokens"
     checkpassslptokenstxt: "This wallet supports Simple Ledger Protocol tokens. Read more at <a href=\"https://simpleledger.cash\">simpleledger.cash</a>."
     checkfailslptokens: "Does not support SLP tokens"
-    checkfailslptokenstxt: "This wallet does not support Simple Ledger Protocol tokens. Read more at <a href="https://simpleledger.cash">simpleledger.cash</a>"
+    checkfailslptokenstxt: "This wallet does not support Simple Ledger Protocol tokens. Read more at <a href=\"https://simpleledger.cash\">simpleledger.cash</a>"
     educate: "Take time to educate yourself"
     educatetxt: "Bitcoin Cash is different from what you know and use every day. Before you start using Bitcoin Cash for any serious transaction, be sure to read <a href=\"#you-need-to-know#\"><b>what you need to know</b></a> and take appropriate steps to <a href=\"#secure-your-wallet#\"><b>secure your wallet</b></a>. Always remember that it is your responsibility to choose your wallet carefully and adopt good practices in order to protect your money."
   developer-documentation:
