--- a/_translations/en.yml
+++ b/_translations/en.yml
@@ -835,8 +835,8 @@ en:
     blockchaintxt: "The block chain is a <b>public record of Bitcoin Cash transactions</b> in chronological order. The block chain is shared between all Bitcoin Cash users. It is used to verify the permanence of Bitcoin Cash transactions and to prevent <a href=\"#[vocabulary.doublespend]\">double spending</a>."
     block: "Block"
     blocktxt: "A block is a <b>record in the block chain that contains and confirms many waiting transactions</b>. Roughly every 10 minutes, on average, a new block including transactions is appended to the <a href=\"#[vocabulary.blockchain]\">block chain</a> through <a href=\"#[vocabulary.mining]\">mining</a>."
-    btc: "BTC"
-    btctxt: "BTC is a common unit used to designate one Bitcoin Cash (B⃦)."
+    bch: "BCH"
+    bchtxt: "BCH is a common unit used to designate one Bitcoin Cash (B⃦)."
     confirmation: "Confirmation"
     confirmationtxt: "Confirmation means that a transaction has been <b>processed by the network and is highly unlikely to be reversed</b>. Transactions receive a confirmation when they are included in a <a href=\"#vocabulary##[vocabulary.block]\">block</a> and for each subsequent block. Even a single confirmation can be considered secure for low value transactions, although for larger amounts like 1000 US$, it makes sense to wait for 6 confirmations or more. Each confirmation <i>exponentially</i> decreases the risk of a reversed transaction."
     cryptography: "Cryptography"
@@ -961,7 +961,7 @@ en:
       bitcoin: bitcoin
       blockchain: block-chain
       block: block
-      btc: btc
+      bch: bch
       confirmation: confirmation
       cryptography: cryptography
       doublespend: double-spend
