Find/replace Bitcoin Cash Core

--- a/_translations/en.yml
+++ b/_translations/en.yml
@@ -5,7 +5,7 @@ en:
     pagedesc: "{{site.name}} is dedicated to help Bitcoin Cash to develop in a sustainable way."
     own: "Who owns {{site.name}}?"
     owntxt: "{{site.name}} was originally registered and owned by Bitcoin's first two developers, <a href=\"https://en.bitcoin.it/wiki/Satoshi_Nakamoto\">Satoshi Nakamoto</a> and <a href=\"https://en.bitcoin.it/wiki/Sirius\">Martti Malmi</a>.  When Nakamoto left the project, he gave ownership of the domain to additional people, separate from the Bitcoin Cash developers, to spread responsibility and prevent any one person or group from easily gaining control over the Bitcoin Cash project."
-    owntxt2: "From 2011 to 2013, the site was primarily used for releasing new versions of the software now called Bitcoin Cash Core. In 2013, the site was redesigned into its current form, adding numerous pages, listing additional Bitcoin Cash software, and creating the translation system.  Developer documentation was added in 2014."
+    owntxt2: "From 2011 to 2013, the site was primarily used for releasing new versions of the software now called Bitcoin Unlimited. In 2013, the site was redesigned into its current form, adding numerous pages, listing additional Bitcoin Cash software, and creating the translation system.  Developer documentation was added in 2014."
     owntxt3: "Today the site is an independent open source project with contributors from around the world. Final publication authority is held by the co-owners, but all regular activity is organized through the public <a href=\"{{site.repo}}#working-with-github\">pull request process</a> and managed by the site co-maintainers."
     owntxt4: "{{site.name}} is not Bitcoin's official website. Just like nobody owns the email technology, nobody owns the Bitcoin Cash network. As such, nobody can speak with authority in the name of Bitcoin."
     control: "Then... who controls Bitcoin?"
@@ -221,17 +221,17 @@ en:
     checkneutralvalidationvariable: "Variable validation"
     checkneutralvalidationvariabletxt: "Payment validation features are provided by the software wallet you use with this device. Please see the Validation score for the software wallet you plan to use."
     checkpassvalidationspvp2p: "Simplified validation"
-    checkpassvalidationspvp2ptxt: "This wallet uses SPV and the Bitcoin Cash network. This means very little trust in third parties is required when verifying payments. However, it is not as secure as a full node like <a href=\"#download#\">Bitcoin Cash Core</a>."
+    checkpassvalidationspvp2ptxt: "This wallet uses SPV and the Bitcoin Cash network. This means very little trust in third parties is required when verifying payments. However, it is not as secure as a full node like <a href=\"#download#\">Bitcoin Unlimited</a>."
     checkpassvalidationspvservers: "Simplified validation"
-    checkpassvalidationspvserverstxt: "This wallet uses SPV and random servers from a list. This means little trust in third parties is required when verifying payments. However, it is not as secure as a full node like <a href=\"#download#\">Bitcoin Cash Core</a>."
+    checkpassvalidationspvserverstxt: "This wallet uses SPV and random servers from a list. This means little trust in third parties is required when verifying payments. However, it is not as secure as a full node like <a href=\"#download#\">Bitcoin Unlimited</a>."
     checkpassvalidationservers: "Decentralized validation"
-    checkpassvalidationserverstxt: "This wallet connects to a random server from a list. This means some trust in third parties is required when verifying payments. However, it is not as secure as a full node like <a href=\"#download#\">Bitcoin Cash Core</a>."
+    checkpassvalidationserverstxt: "This wallet connects to a random server from a list. This means some trust in third parties is required when verifying payments. However, it is not as secure as a full node like <a href=\"#download#\">Bitcoin Unlimited</a>."
     checkfailvalidationcentralized: "Centralized validation"
     checkfailvalidationcentralizedtxt: "This wallet relies on a centralized service by default. This means a third party must be trusted to not hide or simulate payments."
     checkgoodtransparencydeterministic: "Complete transparency"
     checkgoodtransparencydeterministictxt: "This wallet is open-source and built deterministically. This means any developer in the world can audit the code and make sure the final software isn't hiding any secrets."
     checkpasstransparencyopensource: "Basic transparency"
-    checkpasstransparencyopensourcetxt: "The developers of this wallet publish the source code for the client. This means any developer in the world can audit the code. However, you still need to trust developers of this wallet when installing or updating the final software because it was not built deterministically like <a href=\"#download#\">Bitcoin Cash Core</a>."
+    checkpasstransparencyopensourcetxt: "The developers of this wallet publish the source code for the client. This means any developer in the world can audit the code. However, you still need to trust developers of this wallet when installing or updating the final software because it was not built deterministically like <a href=\"#download#\">Bitcoin Unlimited</a>."
     checkpasstransparencyopensourcehardware: "Basic transparency"
     checkpasstransparencyopensourcehardwaretxt: "The source code for this wallet is public. This means any developer in the world can audit the code. However, you still need to trust developers of this wallet because the device cannot be verified to be using the same source code to generate secure random seeds and for other operations. Updating your device's firmware, generating your own secure random seed or using multi-signature can make it harder to steal your bitcoins."
     checkpasstransparencyopenspechardware: "Basic transparency"
@@ -539,7 +539,7 @@ en:
     poweredoff: "What if I receive a Bitcoin Cash when my computer is powered off?"
     poweredofftxt1: "This works fine. The bitcoins will appear next time you start your wallet application. Bitcoins are not actually received by the software on your computer, they are appended to a public ledger that is shared between all the devices on the network. If you are sent bitcoins when your wallet client program is not running and you later launch it, it will download blocks and catch up with any transactions it did not already know about, and the bitcoins will eventually appear as if they were just received in real time. Your wallet is only needed when you wish to spend bitcoins."
     sync: "What does \"synchronizing\" mean and why does it take so long?"
-    synctxt1: "Long synchronization time is only required with full node clients like Bitcoin Cash Core. Technically speaking, synchronizing is the process of downloading and verifying all previous Bitcoin Cash transactions on the network. For some Bitcoin Cash clients to calculate the spendable balance of your Bitcoin Cash wallet and make new transactions, it needs to be aware of all previous transactions. This step can be resource intensive and requires sufficient bandwidth and storage to accommodate the full size of the block chain. For Bitcoin Cash to remain secure, enough people should keep using full node clients because they perform the task of validating and relaying transactions."
+    synctxt1: "Long synchronization time is only required with full node clients like Bitcoin Unlimited. Technically speaking, synchronizing is the process of downloading and verifying all previous Bitcoin Cash transactions on the network. For some Bitcoin Cash clients to calculate the spendable balance of your Bitcoin Cash wallet and make new transactions, it needs to be aware of all previous transactions. This step can be resource intensive and requires sufficient bandwidth and storage to accommodate the full size of the block chain. For Bitcoin Cash to remain secure, enough people should keep using full node clients because they perform the task of validating and relaying transactions."
     mining: "Mining"
     whatismining: "What is Bitcoin Cash mining?"
     whatisminingtxt1: "Mining is the process of spending computing power to process transactions, secure the network, and keep everyone in the system synchronized together. It can be perceived like the Bitcoin Cash data center except that it has been designed to be fully decentralized with miners operating in all countries and no individual having control over the network. This process is referred to as \"mining\" as an analogy to gold mining because it is also a temporary mechanism used to issue new bitcoins. Unlike gold mining, however, Bitcoin Cash mining provides a reward in exchange for useful services required to operate a secure payment network. Mining will still be required after the last Bitcoin Cash is issued."
@@ -693,7 +693,7 @@ en:
     pagetitle: "Press center"
     summary: "Find interviewees, answers and high quality press materials."
     volunteer: "Interviewees"
-    volunteernonprofit: "Communicate with <a href=\"https://www.bitgivefoundation.org\">BitGive</a>, the <a href=\"https://bitcoincore.org/en/contact\">Bitcoin Cash Core Project</a> or local <a href=\"#community##[community.non-profit]\">non-profit organizations</a>."
+    volunteernonprofit: "Communicate with <a href=\"https://www.bitgivefoundation.org\">BitGive</a>, the <a href=\"https://bitcoincore.org/en/contact\">Bitcoin Unlimited Project</a> or local <a href=\"#community##[community.non-profit]\">non-profit organizations</a>."
     faqmore: "To learn more about Bitcoin, please visit the complete <a href=\"/en/faq\">FAQ</a> or the <a href=\"https://en.bitcoin.it/wiki/Help:FAQ\">Bitcoin Cash Wiki</a>."
   privacy:
     title: "Privacy Policy - Bitcoin"
@@ -727,7 +727,7 @@ en:
     mixing: "Limitations of mixing services"
     mixingtxt: "Some online services called mixing services offer to mix traceability between users by receiving and sending back the same amount using independent Bitcoin Cash addresses. It is important to note that the legality of using such services might vary and be subjected to different rules in each jurisdiction. Such services also require you to trust the individuals running them not to lose or steal your funds and not to keep a log of your requests. Even though mixing services can break traceability for small amounts, it becomes increasingly difficult to do the same for larger transactions."
     future: "Future improvements"
-    futuretxt: "Many improvements can be expected in the future to improve privacy. For instance, some efforts are ongoing with the payment messages API to avoid tainting multiple addresses together during a payment. Bitcoin Cash Core change addresses might be implemented in other wallets over time. Graphical user interfaces might be improved to provide user friendly payment request features and discourage addresses reuse. Various work and research is also being done to develop other potential extended privacy features like being able to join random users' transactions together."
+    futuretxt: "Many improvements can be expected in the future to improve privacy. For instance, some efforts are ongoing with the payment messages API to avoid tainting multiple addresses together during a payment. Bitcoin Unlimited change addresses might be implemented in other wallets over time. Graphical user interfaces might be improved to provide user friendly payment request features and discourage addresses reuse. Various work and research is also being done to develop other potential extended privacy features like being able to join random users' transactions together."
   resources:
     title: "Resources - Bitcoin"
     pagetitle: "Bitcoin Cash resources"
@@ -871,7 +871,7 @@ en:
     instanttxt: "Transactions don't start out as irreversible. Instead, they get a <i>confirmation</i> score that indicates how hard it is to reverse them (see table).  Each confirmation takes between a few seconds and 90 minutes, with 10 minutes being the average. If the transaction pays too low a fee or is otherwise atypical, getting the first confirmation can take much longer."
     confirmations: "Confirm&shy;ations"
     lightweight_wallets: "Lightweight wallets"
-    bitcoin_core: "<a href=\"#download#\">Bitcoin Cash Core</a>"
+    bitcoin_core: "<a href=\"#download#\">Bitcoin Unlimited</a>"
     unconfirmed_only_safe: "Only safe if you trust the person paying you"
     somewhat_reliable: "Somewhat reliable"
     mostly_reliable: "Mostly reliable"
@@ -907,14 +907,14 @@ en:
     menu-vocabulary: Vocabulary
     menu-you-need-to-know: "You need to know"
     banner-core-moved: |
-      This page has moved to the new Bitcoin Cash Core
+      This page has moved to the new Bitcoin Unlimited
       website (click here to be redirected)
 
     banner-translate: "Translations for this language are outdated. <a href=\"{{site.repo}}#translation\">Click here to help translate {{site.name}} in your language</a>."
     footer: "Released under the <a href=\"http://opensource.org/licenses/mit-license.php\" target=\"_blank\">MIT license</a>"
     sponsor: "A community website sponsored by"
     getstarted: "Get started with Bitcoin"
-    bitcoin-core: "Bitcoin Cash Core"
+    bitcoin-core: "Bitcoin Unlimited"
     donation-banner-text: "{{site.name}} is a community funded project, donations are appreciated and used to improve the website."
     donation-banner-toggle-button: "{{site.name}} needs your support!"
     donation-banner-donate-button: "Make a donation"
